# ambience

./: .gitignore  IMPROVEMENTS.md  README.md  TIME_HANDLING.md  ambience.opam  dune-project  makefile  test.ml
docs/: Ambient_Commerce_Protocol.txt  MATCHING_ENGINE.md  MATCHING_ENGINE_IMPROVEMENTS.md  MATCHING_TRUST_INTEGRATION.md  Theory.txt
examples/: README.md
examples/circular_marketplace/: dune  main.ml
examples/compute_market/: main.ml
examples/energy_trading/: main.ml
examples/novel_resources/: dune  main.ml
lib/: ambient.ml  ambient.mli  dune
lib/core/: README.md  core.ml  core.mli  dune  intent.ml  intent.mli  registry.ml  registry.mli  resource.ml  resource.mli  state.ml  state.mli  time_provider.ml  time_provider.mli  types.ml  types.mli
lib/matching/: README.md  discovery.ml  discovery.mli  dune  engine.ml  engine.mli  manifold.ml  manifold.mli  negotiation.ml  negotiation.mli
lib/network/: README.md  dune  gossip.ml  gossip.mli  peer.ml  peer.mli  protocol.ml  protocol.mli  transport.ml  transport.mli
lib/settlement/: README.md  dune  escrow.ml  escrow.mli  executor.ml  executor.mli  proof.ml  proof.mli  reversal.ml  reversal.mli
lib/trust/: README.md  capability.ml  capability.mli  collateral.ml  collateral.mli  dune  reputation.ml  reputation.mli
test/: dune_simple
test/test/: agent_fixtures.ml  dune  intent_fixtures.ml  match_fixtures.ml  test_all.ml  test_circular_trades.ml  test_core_types.ml  test_helpers.ml  test_intent.ml  test_matching_engine.ml  test_simple.ml  test_time_provider.ml
