(library
 (name test_helpers)
 (modules test_helpers)
 (libraries
  ambience.core
  ambience.matching
  ambience.settlement
  alcotest
  yojson)
 (flags (:standard -w -A)))

(library
 (name fixtures)
 (modules
  intent_fixtures
  match_fixtures
  agent_fixtures)
 (libraries
  ambience.core
  test_helpers)
 (flags (:standard -w -A)))

(executable
 (name test_all)
 (modules test_all test_core_types test_intent test_time_provider)
 (libraries
  ambience.core
  test_helpers
  fixtures
  alcotest
  unix)
 (flags (:standard -w -A))
 (preprocess (pps ppx_deriving_yojson)))

(rule
 (alias runtest)
 (action (run ./test_all.exe)))

(test
 (name test_simple)
 (modules test_simple)
 (libraries alcotest)
 (flags (:standard -w -A)))

(executable
 (name test_matching_engine)
 (modules test_matching_engine)
 (libraries
  ambience.core
  ambience.matching
  alcotest
  unix)
 (flags (:standard -w -A)))

(rule
 (alias runtest)
 (action (run ./test_matching_engine.exe)))

(executable
 (name test_circular_trades)
 (modules test_circular_trades)
 (modes byte exe)
 (libraries
  ambience.core
  ambience.matching
  alcotest
  unix)
 (flags (:standard -w -A)))

(rule
 (alias runtest)
 (action (run ./test_circular_trades.exe)))